# direvent

./: Makefile.am  NEWS  README  THANKS  acinclude.m4  bootstrap  configure.ac
doc/: .gitignore  Makefile.am  direvent.8  direvent.conf.5  direvent.texi  gendocs.pl  html.init  htmlxref.cnf  webdoc.init
po/: POTFILES.in
src/: Makefile.am  closefds.c  cmdline.opt  config.c  detach-bsd.c  detach-darwin.c  detach-std.c  direvent.c  direvent.h  environ.c  envop.c  envop.h  ev_inotify.c  ev_kqueue.c  event.c  fnpat.c  handler.c  progman.c  sigv.c  watcher.c  wildmatch.c
tests/: .gitignore  Makefile.am  atlocal.in  attrib.at  change.at  cmdexp.at  create.at  createrec.at  createrec2.at  createrec3.at  delete.at  env00.at  env01.at  env02.at  env03.at  env04.at  env05.at  env06.at  envdump.c  envleg00.at  envleg01.at  envleg02.at  envleg03.at  file.at  genfile.c  glob01.at  glob02.at  listname  re01.at  re02.at  re03.at  re04.at  re05.at  remove.at  samepath.at  sent.at  shell.at  testsuite.at  write.at
